src/components/search/search-results/search-results-styles.css
.table-cell{
    color: white;
    padding: 0px !important;
    width: 100px ;
}
#table-container{
    margin-top: 5vh;
    width:98vw;
    overflow: scroll;
    height:100vh;
}
.result-entry-card{
    background-color:#222222 !important;
    color:white !important;
    display:flex;
    border: 1px solid white !important;
}
/* mobile */
@media screen and (max-width: 500px) {
.result-entry-card{
    display:block;
}
.result-entry-image{
    justify-self: center;
    margin-top: 15px;
    height: 150px;
    width:150px;
    min-height:150px;
    min-width:150px;
    max-width:150px;
    max-height:150px;
    background-size:cover;
}
}
/* tablets,laptops,desktops */
@media screen and (min-width: 501px) {
.result-entry-image{
    height: 300px;
    width:300px;
    min-height:300px;
    min-width:300px;
    max-width:300px;
    max-height:300px;
    background-size:cover;
    z-index: 1;
}
}

